--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -197,16 +197,22 @@ button {
     /*fa-times-circle: true;*/
 }
 
+.score {
+    /*margin: 0px; */
+	background-color: #90EE90; /* light cool green --> i.e. 'success' */
+	margin-bottom: 2em;
+	padding-bottom: 1em;
+    width: 100%;
+    border: 1px solid lightgray;
+    border-radius: 20px;
+    font-size: 1.5em;
+}
+
 .answer {
-	/*visibility: hidden;*/
-	/*display: none;*/
     margin: 0px; 
     width: 100%;
     border: 0px solid lightgray;
     border-radius: 20px;
-    /*margin: 1em;*/
-    /*padding-top: 1em;*/
-    /*margin-top: 2em;*/
     font-size: 1.5em;
 }
 
