--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,7 @@ Hello, I am the quiz results. :)
 		[@visibility]="stateExpression"
 		(@visibility.done)="questionAnimationDone()"
         [ngClass]="{'hidden': false}"
-		*ngIf="quiz.quiz_display_type==quiz.ONE_QUESTION_AT_A_TIME">
+		*ngIf="(quiz.quiz_display_type==quiz.ONE_QUESTION_AT_A_TIME) && (!quiz.wasEvaluated())">
 
 <div class="question" style="border: 0px solid red;">
 		<!-- <span class="questiontitle">{{quiz.getCurrentQuestion().question}}</span> -->
@@ -101,9 +101,16 @@ Hello, I am the quiz results. :)
 </div>
 
 
+
 <div *ngIf="false && quiz.getCurrentQuestion().wasAnswered()" class="quiz-done">{{quiz.quiz_done_status_message}}</div>
 
 </div> 
+
+<div *ngIf="quiz.wasEvaluated()" class="score">
+<div><h2>Quiz Completed!</h2></div>
+<div><h3>You got {{quiz.num_right}} out of {{quiz.numberOfQuestions()}} questions correct.</h3></div>
+<div>You are on your way to becoming a master!</div>
+</div>
 
 <button [ngClass]="" 
 		class="continue" 
