--- a/src/app/fill-in-the-blank-question.component.html
+++ b/src/app/fill-in-the-blank-question.component.html
@@ -1,6 +1,8 @@
+<h3>FillInTheBlank question type</h3>
+
 
 <div class="question" style="border: 0px solid red;">
-		<span class="questiontitle">{{question.question}}</span>
+		<span class="questiontitle">{{question.title}}</span>
         <div class="useranswer">
         <textarea   id="useranswer" #focusThis
 					style=""
