--- a/src/app/multiple-choice-question.component.css
+++ b/src/app/multiple-choice-question.component.css
@@ -1,3 +1,41 @@
+.multiplechoiceanswers {
+}
+
+.multiplechoiceanswer {
+	font-size: 1.00em;
+   /*background: transparent;*/
+    background: #369;
+    color: #fff;
+    font-size: 1.5em;
+    outline: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: auto;
+    /*width: 50%;*/
+    min-height: 2em;
+    min-width: 4em;
+    /*height: 4em;*/
+    margin: 1em auto;
+	padding: 0.5em;
+    border: 0px solid #00AA66;
+    border-radius: 10%/50%;
+    /*text-align: right;*/
+    /*background-color: #000;*/
+
+}
+
+
+
+
+li {
+    font-size: 1.25em;
+}
+
+
+
+
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
