--- a/src/app/multiple-choice-question.component.css
+++ b/src/app/multiple-choice-question.component.css
@@ -3,7 +3,6 @@
 
 .multiplechoiceanswer {
 	font-size: 1.00em;
-   /*background: transparent;*/
     background: #369;
     color: #fff;
     font-size: 1.5em;
@@ -12,19 +11,27 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     overflow: auto;
-    /*width: 50%;*/
+    width: 50%;
     min-height: 2em;
     min-width: 4em;
-    /*height: 4em;*/
     margin: 1em auto;
-	padding: 0.5em;
+	padding: 0.5em 0.5em 0.5em 1em;;
     border: 0px solid #00AA66;
-    border-radius: 10%/50%;
-    /*text-align: right;*/
-    /*background-color: #000;*/
-
+    border-radius: 25px;
 }
 
+.answerselected{
+    background: #ffcc00;
+}
+
+.textred{
+	color:red;
+}
+
+.multiplechoiceanswer:hover {
+    filter: brightness(115%);
+    cursor: pointer;
+}
 
 
 
