--- a/src/app/verb-conjugation-question.component.css
+++ b/src/app/verb-conjugation-question.component.css
@@ -1,10 +1,55 @@
 
+
+.tooltip{
+	display:block;
+	top:-30%;
+	right:0%;
+	font-size:1.5em;
+	clear:both;
+	padding:0px;
+	text-align:center;
+	background-color:lightgreen;
+	opacity:.9;
+	z-index:100;
+	position:absolute;
+	border:1px solid green;
+	border-radius:10px;
+	width:150px;
+	margin:0px;	
+	overflow:auto;
+}
+
+
 .conjugation-input{
     border-radius: 20px;
     border: 1px solid #d3d3d3; 
-    font-size: 1.4em;
-	width:5em;
+    font-size: 1.3em;
+	width:7em;
 	padding: 0 0 0 .5em;
+
+	/* begin textarea copy to get near-circular highlighting if possible */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: auto;
+    max-width: 100%;
+    resize: none;
+    /*font-size: 1.5em;*/
+    /*border-radius: 20px;*/
+    border: 1px solid #d3d3d3;
+    /*padding: 20px;*/
+}
+
+.conjugation-input:focus{
+    border-radius: 20px;
+    outline:none;
+    /*border: 1px solid #4195fc; */
+    /*border: 1px solid #d3d3d3; */
+    /* create a BIG glow */
+   
+    box-shadow: 0px 0px 10px #369; 
+    -moz-box-shadow: 0px 0px 10px #369;
+    -webkit-box-shadow: 0px 0px 10px #369;  
 }
 
 .verb{
@@ -13,34 +58,62 @@
 	text-align: center;
 }
 
+.glow {
+  color: #444;
+  text-shadow: 
+    1px 0px 1px #ccc, 0px 1px 1px #eee, 
+    2px 1px 1px #ccc, 1px 2px 1px #eee,
+    3px 2px 1px #ccc, 2px 3px 1px #eee,
+    4px 3px 1px #ccc, 3px 4px 1px #eee,
+    5px 4px 1px #ccc, 4px 5px 1px #eee,
+    6px 5px 1px #ccc, 5px 6px 1px #eee,
+    7px 6px 1px #ccc;
+}
+
+.conjugations-container{
+	margin: 0px auto !important;
+	width:90%;
+	/*background-color:orange;*/
+}
+
 .wrapper { 
-    padding: 10px 0px 0px 0px;
-	margin: 20px 0px 20px 0px;
+	border:0px solid yellow;
+    padding: 0px 0px 0px 0px;
+	/*margin: 20px 0px 20px 0px;*/
+	margin: 20px auto;
   	border : 0px solid #000; 
 	border-radius: 10px;
   	overflow:hidden;
   	background-color: lightgrey;
+	max-width: 700px;
 }
-.right{
+.pronoun{
+	position:relative; /*// RED_FLAG added late....only for positioning fake tooltips*/
+	background-color: transparent;
+	white-space:nowrap;
 	font-size:1.1em;
   	text-align:right;
 }
 .wrapper div {
-   min-height: 50px;
-   padding: 2px;
+  	border: 0px solid green;
+	margin: 10px 0px 10px 0px;
+	/*margin: 10px auto;*/
+   	min-height: 50px;
+   	padding: 2px;
 }
 #colone {
   background-color: lightgray;
   float:left; 
-  margin-right:20px;
-  width:300px;
+  /*margin-right:0px;*/
+  width:310px;
   border-right:0px solid #000;
+	/*margin-right: 0px;*/
 }
 #coltwo { 
   background-color: lightgray;
-  width:300px;
+  width:310px;
   overflow:hidden;
-  border:0px solid #ccc;
+  /*border:1px solid red;*/
 }
 
 @media screen and (max-width: 300px) {
@@ -115,7 +188,7 @@ h1 {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
 
 .nothidden {
@@ -303,11 +376,13 @@ button {
 }
 
 .answer {
-    margin: 0px; 
+    margin: 5px; 
     width: 100%;
+	height: 100%;
     border: 0px solid lightgray;
     border-radius: 20px;
     font-size: 1.5em;
+	padding: 10px;
 }
 
 .quiz-done {
