--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,20 @@
+/* Added for new menu/nav bar */
+.active {
+    color: white !important;
+}
+.navbar-nav>li>a {
+    /*color: #ffffff; */ /* maybe delcare this inherit or transparent?? */
+    color: #2c3e50; /* maybe delcare this inherit or transparent?? */
+}
+
+.navbar-brand {
+  color: #2c3e50;
+}
+
+
+
+
+
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
