--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
+<header>
+    <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a routerLink="/" routerLinkActive="active" 
+                [routerLinkActiveOptions]="{exact:true}" class="navbar-brand">My Routing App</a>
+
+            <ul class="nav navbar-nav">
+                <li><a routerLink="/" routerLinkActive="active"
+                    [routerLinkActiveOptions]="{ exact: true }">Home</a></li>
+                <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+                <li><a routerLink="/contact" routerLinkActive="active">Contact</a></li>
+            </ul>
+
+        </div>
+    </div>
+    </nav>
+</header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
+
 <div class="centering-container">
 <div layout="row" flex layout-align="center center">
 <div layout="column" layout-align="center">
@@ -7,8 +30,6 @@
 <h1>
   {{title}}
 </h1>
-
-
 
 <div class="allquestionsatonce" *ngIf="quiz.quiz_display_type==quiz.ALL_QUESTIONS_AT_ONCE">
 <div class="highlight">Hi, we are an "ALL ?s at once"-type of quiz!</div>
