fixed focus, and added cmd to package.json and updated readme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@
 				<div class="questiontitle">{{question.question}}</div>
 			</div>
 			<div class="useranswer">
-				<textarea   #focusThis
+				<textarea   #focusThi
    	                 [(ngModel)]="question.useranswer" 
    	                 [disabled]="quiz.wasEvaluated()"
    	                 [ngClass]="{'disabled': quiz.wasEvaluated()}"
